# trading-strategies

./: .gitignore  Dockerfile  README.md  pyproject.toml
.agents/workflows/: dev-cycle.md  execute-task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/strategies/: __init__.py  base.py  ensemble.py  models.py
src/strategies/indicators/: __init__.py  bollinger_bands.py  macd.py  moving_avg.py  rsi.py
src/strategies/ml/: ml_strategy.py
src/strategies/proto/: trading_pb2.py  trading_pb2.pyi  trading_pb2_grpc.py
src/strategies/rule_based/: __init__.py  bollinger_bands.py  breakout.py  macd_strategy.py  rsi_strategy.py  sma_cross.py
src/strategies/service/: server.py
tests/: test_bb.py  test_macd.py  test_rsi.py  test_sma.py
